--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@heroicons/react": "^2.0.18",
     "axios": "^1.5.0",
     "bootstrap-icons": "^1.10.5",
+    "dotenv": "^16.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.15.0"
   },
@@ -31,6 +33,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "js-cookie": "^3.0.5",
     "postcss": "^8.4.28",
     "prettier": "3.0.2",
     "tailwindcss": "^3.3.3",
